# _quantSystem

./: .gitignore  TODO.md
dashboard/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
dashboard/models/: types.ts
dashboard/src/: App.tsx  PriceChart.tsx  index.css  main.tsx
dashboard/src/components/: OrderBook.tsx  PriceChart.tsx  RecentTrades.tsx
dashboard/src/models/: types.ts
dashboard/src/store/: useCandleStore.ts  useConnectionStore.ts  (+3 more)
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  layout.json  main.jsx
ingestion_engine/: .gitignore  Cargo.toml  config.toml  monitor_dashboard.py  stress_test.py
ingestion_engine/src/: engine.rs  engine_bench.rs  ingestion.rs  interfaces.rs  lib.rs  main.rs  models.rs  server.rs
ingestion_engine/src/api/: mod.rs  ws_server.rs
ingestion_engine/src/connectors/: binance.rs  mod.rs  rest_dispatch.rs
ingestion_engine/src/connectors/binance/: binance.rs  binance_rest.rs  mod.rs
ingestion_engine/src/core/: engine.rs  interfaces.rs  mod.rs  models.rs
ingestion_engine/src/exchanges/: binance.rs  mod.rs
ingestion_engine/src/tests/: engine_bench.rs  frontend_simulator.rs  latency.rs  log_tester.rs  logger_processor.rs  mod.rs  stream_verifier.rs
ingestion_engine/src/utils/: config.rs  mod.rs
quant_core/: .gitignore  numba_dollar_bars.py  pyo3_dollar_bars.py
quant_core/markowitz_eff_frontier/: dyn_eff_frontier.py  stat_eff_frontier.py
quant_core/rust_core/: Cargo.toml  build_rust.ps1
quant_core/rust_core/src/: lib.rs
(+8 files in other folders)
