[package]
name = "ingestion_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.4"
env_logger = "0.10"
log = "0.4"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }

